Manage Employee + Authentication

--- a/back-end/QLVPP/appsettings.json
+++ b/back-end/QLVPP/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JwtSec": {
+    "Key": "99dba734f20a1e74b5e1c8f2cfc52129",
+    "Issuer": "qldt.api",
+    "Audience": "qldt.client",
+    "ExpiresInMinutes": 30
+  },
   "AllowedHosts": "*"
 }
