Add date created and modified

--- a/back-end/QLVPP/appsettings.json
+++ b/back-end/QLVPP/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-2K3VFT4\\MSSQLSERVER01;Database=QLVPP_DB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=DESKTOP-2K3VFT4\\MSSQLSERVER01;Database=QLVPP_DB;User=sa;Password=0931368945Qui@;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
