--- a/back-end/QLVPP/.gitignore
+++ b/back-end/QLVPP/.gitignore
@@ -126,3 +126,9 @@ sonarqube.out
 *.temp
 *.cachefile
 *.dbmdl
+# --------------------------
+# Docker
+# --------------------------
+Dockerfile
+docker-compose*.yml
+.dockerignore
