--- a/back-end/QLVPP/appsettings.json
+++ b/back-end/QLVPP/appsettings.json
@@ -14,5 +14,24 @@
     "Audience": "qlvpp.client",
     "ExpiresInMinutes": 30
   },
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 429,
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Period": "1m",
+        "Limit": 100
+      },
+      {
+        "Endpoint": "POST:/api/auth/login",
+        "Period": "1m",
+        "Limit": 10
+      }
+    ]
+  },
   "AllowedHosts": "*"
 }
